--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -94,6 +94,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Walk",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Walk",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="UpDown",Scale=-1.000000,Key=MouseY)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
