--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -92,6 +92,7 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Activate",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +AxisMappings=(AxisName="Walk",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Walk",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
