--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -110,4 +110,6 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
+[/Script/EngineSettings.GameMapsSettings]
+GameInstanceClass=/Game/Blueprints/GameInstanceSH.GameInstanceSH_C
 
